Fix horizontal scrolling on div in mobile view.
Fix issue caused by translated mobile nav menu.

--- a/src/styles/_carousel.sass
+++ b/src/styles/_carousel.sass
@@ -7,7 +7,7 @@
 
   .item
     width: 500px
-    height: 280px
+    height: 200px
     flex: 0 0 auto
     margin-right: 20px
     cursor: pointer
