--- a/src/styles/_hero.sass
+++ b/src/styles/_hero.sass
@@ -3,7 +3,7 @@
   background-repeat: no-repeat
   background-position: center top
   background-size: cover
-  height: 90vh
+  height: 100vh
   padding: 10rem 10% 4rem
   display: grid
   grid-template-columns: 1fr auto 1fr
@@ -30,13 +30,16 @@
     position: relative
     z-index: 2
     margin: 0
-    
+
     strong
       color: $secondary-color
 
     @media (max-width: 620px)
       font-size: 18vw
       max-width: 30vw
+
+    @media (max-width: 415px)
+      font-size: 16vw
 
   svg
     grid-column: 2 / 3
