--- a/src/styles/_instagram-carousel.sass
+++ b/src/styles/_instagram-carousel.sass
@@ -1,7 +1,6 @@
 .youtube-feed, .instagram-feed
   h2
     margin: 4rem auto 1rem
-    width: 100%
   
 .instagram-carousel
   @extend .carousel
