--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -4,7 +4,6 @@ body
   background-color: $background-color
   color: $font-color
   position: relative
-  overflow-x: hidden
 
   @media (max-width: 620px)
     font-size: 14px
